--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.69.5",
     "sharp": "^0.32.6"
   },
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.9",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.2",
     "eslint-config-prettier": "^9.0.0",
